samples/_failures_safe/1760961595_c56fd7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cae52dbc.c: In function ‘add_log_entry’:
./samples/SAFE/__tmp_cae52dbc.c:128:66: error: missing terminating ' character
  128 |         analyzer->start_time[sizeof(analyzer->start_time) - 1] = '\
      |                                                                  ^~
./samples/SAFE/__tmp_cae52dbc.c:128:9: error: expected expression at end of input
  128 |         analyzer->start_time[sizeof(analyzer->start_time) - 1] = '\
      |         ^~~~~~~~
./samples/SAFE/__tmp_cae52dbc.c:128:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cae52dbc.c:128:9: error: expected declaration or statement at end of input
